--- a/mainapp/templates/mainapp/includes/inc__main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc__main_menu.html
@@ -1,43 +1,3 @@
-<!-- <div class="clearfix">
-    <a href="{% url 'mainapp:index' %}" class="logo"></a>
-    <ul class="menu">
-        <li>
-            <a href="{% url 'mainapp:index' %}" class="active">
-                домой
-            </a>
-        </li>
-        <li>
-            <a href="{% url 'mainapp:products' %}">
-                продукты
-            </a>
-        </li>
-        <li>
-            <a href="{% url 'mainapp:contact' %}">
-                контакты
-            </a>
-        </li>
-        {% if user.is_authenticated %}
-        <a href="{% url 'auth:profile_edit' pk=request.user.pk %}">
-            {{ user.get_full_name|default:user.get_username }}
-        </a>
-        {% endif %}
-
-        {% if user.is_authenticated %}
-        <a href="{% url 'auth:logout' %}">
-            выход
-        </a>
-        {% else %}
-        <a href="{% url 'auth:login' %}">
-            вход
-        </a>
-        {% endif %}
-    </ul>
-    <div class="search-menu">
-        <a href="#" class="search"></a>
-        <a href="{% url 'basket:index' %}" class="basket"></a>
-    </div>
-</div> -->
-
 <div class="header clearfix">
     <a href="{% url 'mainapp:index' %}" class="logo"></a>
     <ul class="menu">
@@ -60,9 +20,30 @@
             </a>
         </li>
         {% if user.is_authenticated %}
-        <a href="{% url 'auth:profile_edit' pk=request.user.pk %}">
+        <li>
+            <div class="dropdown">
+                <a class="dropdown-toggle" href="" data-toggle="dropdown">
+                    {{ user.first_name|default:'Пользователь' }}
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                    <li>
+                        <a href="{% url 'auth:profile_edit' pk=request.user.pk %}">
+                            <!-- {{ user.get_full_name|default:user.get_username }} -->
+                            {{ user.first_name|default:'Пользователь' }}
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{#% url 'orders:index' %#}">
+                            заказы
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <!-- <a href="{% url 'auth:profile_edit' pk=request.user.pk %}">
             {{ user.get_full_name|default:user.get_username }}
-        </a>
+        </a> -->
         {% endif %}
         {% if user.is_superuser %}
             <a href="{% url 'my_admin:index' %}">
