--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -1,45 +1,49 @@
 {% extends "ordersapp/base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block container %}
-    {% include 'ordersapp/includes/inc__order_summary.html' %}
-    <div class="order_form">
-        {% include 'ordersapp/includes/inc__order_actions.html' %}
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <table class="table">
-                {{ orderitems.management_form }}
-                {% for form in orderitems.forms %}
+{% include 'ordersapp/includes/inc__order_summary.html' %}
+<div class="order_form">
+    <!-- {% include 'ordersapp/includes/inc__order_actions.html' %} -->
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <table class="table">
+            {{ orderitems.management_form }}
+            {% for form in orderitems.forms %}
+            {% if forloop.first %}
+            <thead>
+                <tr>
+                    {% for field in form.visible_fields %}
+                    <th class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
+                        {% if field.label == "Delete" %}
+                        Удалить
+                        {% else %}
+                        {{ field.label|capfirst }}
+                        {% endif %}
+                    </th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            {% endif %}
+            <tr class="formset_row">
+                {% for field in form.visible_fields %}
+                <td class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
                     {% if forloop.first %}
-                        <thead>
-                        <tr>
-                            {% for field in form.visible_fields %}
-                                <th class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
-                                    {{ field.label|capfirst }}
-                                </th>
-                            {% endfor %}
-                        </tr>
-                        </thead>
+                    {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                    {% endfor %}
                     {% endif %}
-                    <tr class="formset_row">
-                        {% for field in form.visible_fields %}
-                            <td class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
-                                {% if forloop.first %}
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
-                                {% endif %}
-                                {{ field.errors.as_ul }}
-                                {{ field }}
-                            </td>
-                        {% endfor %}
-                    </tr>
+                    {{ field.errors.as_ul }}
+                    {{ field }}
+                </td>
                 {% endfor %}
-            </table>
-            <input type="submit" value="сохранить"
-                    class="btn btn-default btn-round form-control last">
-            <!-- {% include 'ordersapp/includes/inc__order_actions.html' %} -->
-        </form>
-    </div>
+            </tr>
+            {% endfor %}
+        </table>
+        <input type="submit" value="сохранить" class="btn btn-secondary btn-round form-control last">
+        <!-- {% include 'ordersapp/includes/inc__order_actions.html' %} -->
+    </form>
+    {% include 'ordersapp/includes/inc__order_actions.html' %}
+</div>
 {% endblock %}
