--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -11,11 +11,13 @@
     {% block css %}
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style_for_orders.css' %}">
     {% endblock %}
     {% block js %}
-        <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/ecombootstrapjs/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/ecombootstrapjs/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/ecombootstrapjs/jquery.formset.js' %}"></script>
+    <script src="{% static 'js/order_scripts.js' %}"></script>
     {% endblock %}
 </head>
 <body>
