--- a/ordersapp/templates/ordersapp/includes/inc__order_actions.html
+++ b/ordersapp/templates/ordersapp/includes/inc__order_actions.html
@@ -1,19 +1,21 @@
+<div class="btn-group btn-block" role="group">
 {% if object.status == 'F' %}
     <a href="{#% url 'orders:order_forming_complete' object.pk %#}"
        class="btn btn-warning btn-round form-control last">
         соверишть покупку
     </a>
-    <a href="{#% url 'orders:order_delete' object.pk %#}"
-       class="btn btn-default btn-round form-control last">
+    <a href="{% url 'orders:order_delete' object.pk %}"
+       class="btn btn-danger btn-round form-control last">
         удалить
     </a>
 {% endif %}
 
 <a href="{% url 'orders:index' %}"
-   class="btn btn-info btn-round form-control last">
+   class="btn btn-info btn-round form-control last" style="color: black;">
     к списку заказов
 </a>
 <a href="{% url 'mainapp:index' %}"
    class="btn btn-secondary btn-round form-control last">
     на главную
 </a>
+</div>
