--- a/static/css/style_for_orders.css
+++ b/static/css/style_for_orders.css
@@ -1,70 +1,84 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700');
+
 * {
 	margin: 0;
 	padding: 0;
 }
 
+/* .order_container {
+	margin: 25px auto;
+	width: 900px;
+
+} */
 .order_container {
-    margin: 25px auto;
-    width: 900px;
-}
+	margin: 25px auto;
+	width: 900px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%); /* Центрирование по горизонтали и вертикали */
+  }
+  
+
+
 
 .order_container button a {
-    text-decoration: none;
-    color: #555;
+	text-decoration: none;
+	color: #555;
 }
 
 .order_container img {
-    display: block;
-    float: left;
-    width: 150px;
-    border-radius: 25px;
+	display: block;
+	float: left;
+	width: 150px;
+	border-radius: 25px;
 }
 
 
 button.last {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .not_active {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 .table.orders_list {
-    min-width: 600px;
+	min-width: 600px;
 }
 
 .td1.orders_list {
-    width: 40px;
+	width: 40px;
 }
 
 .table.order.formset {
-    min-width: 400px;
+	min-width: 400px;
 }
 
 .td1.order.formset_td {
-    /*width: 70%;*/
+	/*width: 70%;*/
 }
 
 .td2.order.formset_td {
-    /*width: 50px;*/
+	/*width: 50px;*/
 }
 
 .td3.order.formset_td {
-    /*width: 50px;*/
-    text-align: center;
+	/*width: 50px;*/
+	text-align: center;
 }
 
 .td4.order.formset_td {
-    /*width: 50px;*/
-    text-align: center;
+	/*width: 50px;*/
+	text-align: center;
 }
 
 body {
 	font-family: 'Montserrat', sans-serif;
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 }
 
@@ -143,4 +157,60 @@ html, body {
 	margin: 50px auto;
 	width: 600px;
 	font-size: 150%;
+}
+
+
+.formset_row .delete-row {
+	background-color: #f44336;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	outline: none;
+	text-decoration: none;
+	box-shadow: 2px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+}
+
+.formset_row .delete-row:hover {
+	background-color: #d32f2f;
+	box-shadow: 2px 2px 4.85px 0.15px rgba(33, 33, 33, 0.5);
+}
+
+.formset_row .delete-row:active {
+	/* background-color: #c62828;
+	box-shadow: 1px 1px 2px 0.15px rgba(33, 33, 33, 0.7);
+	transform: translateY(1px);  */
+	box-shadow: none;
+	margin-top: 35px;
+}
+
+
+
+.dynamic-form-add .add-row {
+	background-color: #025fff;
+	color: white;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	outline: none;
+	text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	box-shadow: 2px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+}
+
+.dynamic-form-add .add-row:hover {
+	background-color: #0052df;
+	box-shadow: 2px 2px 4.85px 0.15px rgba(33, 33, 33, 0.5);
+}
+
+.dynamic-form-add .add-row:active {
+	/* background-color: #0048c5;
+	box-shadow: 1px 1px 2px 0.15px rgba(33, 33, 33, 0.7);
+	transform: translateY(1px);  */
+	box-shadow: none;
+	margin-top: 35px;
 }
