--- a/static/css/style_for_orders.css
+++ b/static/css/style_for_orders.css
@@ -5,20 +5,20 @@
 	padding: 0;
 }
 
-/* .order_container {
+.order_container {
 	margin: 25px auto;
 	width: 900px;
 
-} */
-.order_container {
+}
+/* .order_container {
 	margin: 25px auto;
 	width: 900px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%); /* Центрирование по горизонтали и вертикали */
+	transform: translate(-50%, -50%);
   }
-  
+   */
 
 
 
